# stormhacks2025

./: .gitignore  README.md
backend/cpp-backend/: CMakeLists.txt  README.md
backend/cpp-backend/include/: tracker.hpp
backend/cpp-backend/src/: idle.cpp  main.cpp  tracker.cpp  window_info.cpp
backend/cpp-backend/src/logs/: activity.jsonl
backend/cpp-backend/src/tests/: test_idle.cpp  test_window_info.cpp
backend/data-backend/: activity.jsonl  context_switches.json  hourly_productivity.json  metrics.jsonl  monitor_status.json  productivity_summary.json  q_analysis.jsonl
docs/: CHANGES-2025-10-05.md  RUNBOOK.md
elevenlabs/config/: requirements.txt
elevenlabs/django_voice/: __init__.py  elevenlabs_client.py  models.py  serializers.py  tasks.py  urls.py  views.py
elevenlabs/electron_voice/: index.html  main.js  preload.js  renderer.js
elevenlabs_module/: .gitignore  evaluator.py  notifier.py  requirements.txt  test.py  test_analysis.jsonl
elevenlabs_module/config/: settings.py
elevenlabs_module/pyenv/: pyvenv.cfg
elevenlabs_module/scripts/: run_monitor.py
elevenlabs_module/sts/: audio_utils.py  hotkey_runner.py  hotkey_test.py  llm_client.py  speech_to_speech.py  stt_elevenlabs.py  tts_elevenlabs.py
frontend/: .gitignore  README.md  build-css.js  forge.config.js  package-lock.json  package.json  tailwind.config.js
frontend-react/electron-react-app/: AGENTS.md  ARCHITECTURE_DOCUMENTATION.md  electron.js  env.example  overlay-preload.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.css  index.html  (+7 more)
(+103 files in other folders)
